force-app/main/default/objects/Module_History__c/Module_History__c.object-meta.xml
<CustomObject>
    <label>Module History</label>
    <nameField>
        <displayFormat>MH-{0000}</displayFormat>
        <label>Module Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modules History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>