force-app/main/default/objects/Module_History__c/fields/Completed_Units__c.field-meta.xml
<CustomField>
    <fullName>Completed_Units__c</fullName>
    <label>Completed Units</label>
    <summaryForeignKey>Unit_History__c.Module_History__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>