force-app/main/default/objects/Module_History__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipName>Modules_Response</relationshipName>
    <type>Lookup</type>
</CustomField>