force-app/main/default/objects/Module_History__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <label>Total Points</label>
    <summarizedField>Unit_History__c.Points__c</summarizedField>
    <summaryForeignKey>Unit_History__c.Module_History__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>