force-app/main/default/objects/Module_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Completed_Units__c</columns>
    <columns>Status__c</columns>
    <columns>Module_Progress__c</columns>
    <columns>Module__c</columns>
    <columns>Total_Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>